--- a/Anytime.Phone/Views/Home/Index.cshtml
+++ b/Anytime.Phone/Views/Home/Index.cshtml
@@ -1,7 +1,5 @@
-﻿@using Anytime.Mailbox.Renter.Portal.Extensions
-@using Anytime.Mailbox.Renter.Portal.Setup
-@using System.Globalization
-@using Anytime.Mailbox.Renter.Portal.ViewModels
+﻿@using Anytime.Phone.Extensions
+@using Anytime.Phone.Setup
 
 @{
     ViewData["Title"] = "Home Page";
@@ -25,7 +23,7 @@
 }
 
 <div class="text-center">
-	<h1 class="display-4">RENTER Portal</h1>
+    <h1 class="display-4">Anytime Phone</h1>
 </div>
 
 
@@ -40,9 +38,4 @@
 	<p>Initials: <b>@initials</b></p>
 }
 
-
-@* @if (User.Identity.Name is null)
-{
-	<a asp-controller="Account" asp-action="Signin" asp-area="MicrosoftIdentity" asp-route-returnUrl="@Context.Request.Path">@Model.EntraSigninLabel</a>
-}
- *@
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
