--- a/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
+++ b/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
@@ -3,6 +3,21 @@
 @using Anytime.Mailbox.Renter.Portal.Extensions;
 
 @inject HostingHelpers _hostingHelpers;
+@{
+    var identityName = User.FindFirst("Name")?.Value ?? string.Empty;
+    var names = (identityName ?? string.Empty)
+                .Split(' ', StringSplitOptions.RemoveEmptyEntries)
+                .Take(2)
+                .ToArray();
+    var email = User.Identity?.Name ?? string.Empty;
+    var firstname = (names.ElementAtOrDefault(0) ?? string.Empty).CapitalizeFirstLetterOnly();
+    var lastname = (names.ElementAtOrDefault(1) ?? string.Empty).CapitalizeFirstLetterOnly();
+    var initials = string.Concat(names
+        .Select(p => !string.IsNullOrEmpty(p) ? char.ToUpper(p[0]).ToString() : string.Empty)
+    );
+
+    var entra_sign_out_label = "Logout";
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,16 +25,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Anytime.Mailbox.Renter.Portal</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Anytime.Mailbox.Renter.Portal.styles.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="~/assets/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Anytime.Mailbox.Renter.Portal.styles.css" asp-append-version="true" />
 
-	@* @Html.Raw(_hostingHelpers.IncludeLibFiles()) *@
-	@Html.Raw(_hostingHelpers.IncludeCssFiles())
+    <!-- Shared Navigation Dependencies -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://localhost:7032/css/styles.css" rel="stylesheet">
+    <!--  -->
 </head>
 <body>
 
-	<header>
+	<header id="nav_placeholder">
 		
 	</header>
 
@@ -34,8 +51,92 @@
             &copy; 2025 - Anytime.Mailbox.Renter.Portal - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    
-	@Html.Raw(_hostingHelpers.IncludeJsFiles())
+
+    <script src="~/assets/js/site.js" asp-append-version="true"></script>
+
+    <!-- Shared Navigation Dependencies -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://localhost:7032/js/navigation.js"></script>
+    <!--  -->
+
+    <script>
+        const model = {
+            logo: {
+                src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png",
+                href: "/",
+                text: "Anytime Renter"
+            },
+            dropdownItems: [
+                { href: "/", text: "Mailbox 111" },
+                { href: "/", text: "Mailbox 75" },
+                { href: "/", text: "Mailbox 3" }
+            ],
+            applications: {
+                buttonText: "My Account",
+                list: [
+                    { href: "https://localhost:7231", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
+                    { href: "https://localhost:7250", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
+                    { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-bacc.png", text: "Business Accelerator" }
+                ]
+            },
+            profile: {
+                userInitial: "@initials",
+                menuItems: [
+                    { href: "/", text: "My Profile" },
+                    { href: "/", text: "Settings" },
+                    { href: "/", text: "Logout" }
+                ]
+            },
+            menuItems: [
+                {
+                    href: "/Home/Inbox",
+                    text: "Inbox",
+                    iconClass: "bi bi-envelope"
+                },
+                {
+                    href: "/Home/Archive",
+                    text: "Archive",
+                    iconClass: "bi bi-archive"
+                },
+                {
+                    text: "Settings",
+                    iconClass: "bi bi-gear",
+                    subMenuItems: [
+                        {
+                            href: "/",
+                            text: "General"
+                        },
+                        {
+                            href: "/",
+                            text: "Security"
+                        },
+                        {
+                            href: "/",
+                            text: "Notifications"
+                        }
+                    ]
+                },
+                {
+                    text: "Help",
+                    iconClass: "bi bi-question-circle",
+                    subMenuItems: [
+                        {
+                            href: "/",
+                            text: "FAQ"
+                        },
+                        {
+                            href: "/",
+                            text: "Contact Support"
+                        }
+                    ]
+                }
+            ]
+        }
+
+        loadNavigationBar('#nav_placeholder', model);
+
+    </script>
     
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
