--- a/Anytime.Phone/Views/Shared/_Layout.cshtml
+++ b/Anytime.Phone/Views/Shared/_Layout.cshtml
@@ -1,15 +1,41 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+@using Anytime.Phone.Extensions
+@using Anytime.Phone.Setup
+
+@inject HostingHelpers _hostingHelpers;
+@{
+    var identityName = User.FindFirst("Name")?.Value ?? string.Empty;
+    var names = (identityName ?? string.Empty)
+                .Split(' ', StringSplitOptions.RemoveEmptyEntries)
+                .Take(2)
+                .ToArray();
+    var email = User.Identity?.Name ?? string.Empty;
+    var firstname = (names.ElementAtOrDefault(0) ?? string.Empty).CapitalizeFirstLetterOnly();
+    var lastname = (names.ElementAtOrDefault(1) ?? string.Empty).CapitalizeFirstLetterOnly();
+    var initials = string.Concat(names
+        .Select(p => !string.IsNullOrEmpty(p) ? char.ToUpper(p[0]).ToString() : string.Empty)
+    );
+
+    var entra_sign_out_label = "Logout";
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Anytime.Phone</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Anytime.Phone.styles.css" asp-append-version="true" />
+
+    <!-- Shared Navigation Dependencies -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/css/styles.css" rel="stylesheet">
+    <!--  -->
 </head>
 <body>
-    <header>
+    <header id="nav_placeholder">
         
     </header>
 
@@ -24,9 +50,54 @@
             &copy; 2025 - Anytime.Phone - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <!-- Shared Navigation Dependencies -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/js/navigation.js"></script>
+    <!--  -->
+
+
+    <script>
+        const model = {
+            logo: {
+                src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo_anytimephone_transparent.png",
+                href: "/",
+                text: "Anytime Phone"
+            },
+            notifications: {
+                count: 3,
+                list: [
+                    "Missed calls (2)",
+                    "New Messages (10)",
+                    "Battery low"
+                ]
+            },
+            applications: {
+                buttonText: "My Account",
+                list: [
+                    { href: "https://localhost:7231", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
+                    { href: "https://localhost:7250", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
+                    { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-bacc.png", text: "Business Accelerator" }
+                ]
+            },
+            profile: {
+                userInitial: "@initials",
+                menuItems: [
+                    { href: "/", text: "My Profile" },
+                    { href: "/", text: "Settings" },
+                    { href: "/", text: "Logout" }
+                ]
+            }
+
+        }
+
+        loadNavigationBar('#nav_placeholder', model);
+
+    </script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
