--- a/Anytime.Mailbox.Shared.Navigation/wwwroot/css/styles.css
+++ b/Anytime.Mailbox.Shared.Navigation/wwwroot/css/styles.css
@@ -14,6 +14,11 @@
 }
 
 /* Header Logo */
+.header-logo {
+    height: 40px;
+    max-height: 40px;
+}
+
 .header-logo .navbar-brand {
     padding: 0;
     margin: 0;
