--- a/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
+++ b/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
@@ -25,13 +25,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Anytime.Mailbox.Renter.Portal</title>
-    <link rel="stylesheet" href="~/assets/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Anytime.Mailbox.Renter.Portal.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Anytime.Mailbox.Renter.Portal.styles.css" asp-append-version="true" /> 
 
     <!-- Shared Navigation Dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://localhost:7032/css/styles.css" rel="stylesheet">
+    <link href="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/css/styles.css" rel="stylesheet">
     <!--  -->
 </head>
 <body>
@@ -52,30 +51,28 @@
         </div>
     </footer>
 
-    <script src="~/assets/js/site.js" asp-append-version="true"></script>
-
     <!-- Shared Navigation Dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://localhost:7032/js/navigation.js"></script>
+    <script src="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/js/navigation.js"></script>
     <!--  -->
 
     <script>
         const model = {
             logo: {
-                src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png",
+                src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo.png",
                 href: "/",
-                text: "Anytime Renter"
+                text: "Anytime Renter Portal"
             },
             dropdownItems: [
-                { href: "/", text: "Mailbox 111" },
-                { href: "/", text: "Mailbox 75" },
-                { href: "/", text: "Mailbox 3" }
-            ],
+                    { href: "/", text: "Mailbox 111" },
+                    { href: "/", text: "Mailbox 75" },
+                    { href: "/", text: "Mailbox 3" }
+                ],
             applications: {
                 buttonText: "My Account",
                 list: [
-                    { href: "https://localhost:7231", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
+                    { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
                     { href: "https://localhost:7250", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
                     { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-bacc.png", text: "Business Accelerator" }
                 ]
