--- a/Anytime.Phone/Views/Shared/_Layout.cshtml
+++ b/Anytime.Phone/Views/Shared/_Layout.cshtml
@@ -25,8 +25,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Anytime.Phone</title>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Anytime.Phone.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Anytime.Phone.styles.css" asp-append-version="true" /> 
 
     <!-- Shared Navigation Dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +35,6 @@
 </head>
 <body>
     <header id="nav_placeholder">
-        
     </header>
 
     <div class="container">
@@ -50,8 +48,6 @@
             &copy; 2025 - Anytime.Phone - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-
-    <script src="~/js/site.js" asp-append-version="true"></script>
 
     <!-- Shared Navigation Dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -67,19 +63,15 @@
                 href: "/",
                 text: "Anytime Phone"
             },
-            notifications: {
-                count: 3,
-                list: [
-                    "Missed calls (2)",
-                    "New Messages (10)",
-                    "Battery low"
-                ]
-            },
+            dropdownItems: [
+                { href: "/", text: "Phone 1" },
+                { href: "/", text: "Phone 10" }
+            ],
             applications: {
                 buttonText: "My Account",
                 list: [
                     { href: "https://localhost:7231", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
-                    { href: "https://localhost:7250", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
+                    { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
                     { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-bacc.png", text: "Business Accelerator" }
                 ]
             },
@@ -90,8 +82,29 @@
                     { href: "/", text: "Settings" },
                     { href: "/", text: "Logout" }
                 ]
-            }
-
+            },
+            menuItems: [
+                {
+                    href: "/Home/Index",
+                    text: "Home",
+                    iconClass: "bi bi-house",
+                },
+                {
+                    href: "/Home/PhoneNumbers",
+                    text: "Phone Numbers",
+                    iconClass: "bi bi-person-lines-fill"
+                },
+                {
+                    href: "/Home/MakeACall",
+                    text: "Make a Call",
+                    iconClass: "bi bi-telephone-outbound"
+                },
+                {
+                    href: "/Home/CallHistory",
+                    text: "Call History",
+                    iconClass: "bi bi-clock-history"
+                }
+            ]
         }
 
         loadNavigationBar('#nav_placeholder', model);
