created navigation-v2.js which is a refactored version that enhances readability of the code. made all Layouts reference v2 as well.

--- a/Anytime.Mailbox.Shared.Navigation/wwwroot/css/styles.css
+++ b/Anytime.Mailbox.Shared.Navigation/wwwroot/css/styles.css
@@ -2,6 +2,10 @@
 /*        HEADER         */
 /* ===================== */
 
+.hidden {
+    display: none !important;
+}
+
 .navbar i::before {
     color: #000;
 }
