--- a/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
+++ b/Anytime.Mailbox.Renter.Portal/Views/Shared/_Layout.cshtml
@@ -30,14 +30,13 @@
     <!-- Shared Navigation Dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/css/styles.css" rel="stylesheet">
+    <link href="https://localhost:7032/css/styles.css" rel="stylesheet">
     <!--  -->
 </head>
 <body>
 
-	<header id="nav_placeholder">
-		
-	</header>
+    <header id="nav_placeholder">
+    </header>
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -54,7 +53,7 @@
     <!-- Shared Navigation Dependencies -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/js/navigation.js"></script>
+    <script src="https://localhost:7032/js/navigation-v2.js"></script>
     <!--  -->
 
     <script>
@@ -74,7 +73,6 @@
                 list: [
                     { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-mailbox.png", text: "Anytime Mailbox Renter" },
                     { href: "https://localhost:7250", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-phones.png", text: "Anytime Phone" },
-                    { href: "/", src: "https://atp-stage-cdn.s3.ap-southeast-1.amazonaws.com/DEMOOnly/images/logo-atmb-bacc.png", text: "Business Accelerator" }
                 ]
             },
             profile: {
@@ -131,8 +129,8 @@
             ]
         }
 
-        loadNavigationBar('#nav_placeholder', model);
-
+        //loadNavigationBar('#nav_placeholder', model);
+        RenderNavigation(model,'nav_placeholder');
     </script>
     
 	@await RenderSectionAsync("Scripts", required: false)
